fixed z-index problems

--- a/src/components/common/layout/navbar/navbar.css
+++ b/src/components/common/layout/navbar/navbar.css
@@ -6,8 +6,6 @@
 
     background-color: #fafafa;
     transition: .3s;
-
-	z-index: 1000;
 }
 
 .navbar-container {
