--- a/src/components/common/notification/notification.css
+++ b/src/components/common/notification/notification.css
@@ -4,7 +4,7 @@
 	bottom: 50px;
 	width: 350px;
 
-	z-index: 10;
+	z-index: 12;
 }
 
 .user-notifications-wrapper {
@@ -14,7 +14,7 @@
 	top: 25px;
 	width: 350px;
 
-	z-index: 12000;
+	z-index: 12;
 }
 
 @media screen and (max-width: 400px) {
