--- a/src/index.css
+++ b/src/index.css
@@ -392,7 +392,7 @@ hr {
 	background: #000;
 	opacity: 0.3;
 
-	z-index: 7000;
+	z-index: 11;
 	animation: OverlayOpacityAppear 0.5s;
 }
 
